// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests XKeys methods 1`] = `
Object {
  "colCount": 4,
  "emitsTimestamp": true,
  "firmwareVersion": 1,
  "hasDMX": false,
  "hasGPIO": false,
  "hasJog": 0,
  "hasJoystick": 0,
  "hasLCD": false,
  "hasPS": true,
  "hasRotary": 0,
  "hasSerialData": false,
  "hasShuttle": 0,
  "hasTbar": 0,
  "hasTrackball": 0,
  "interface": 0,
  "layout": Array [
    Object {
      "endCol": 4,
      "endRow": 6,
      "index": 0,
      "name": "Keys",
      "startCol": 1,
      "startRow": 1,
    },
  ],
  "name": "XK-24",
  "productId": 1029,
  "rowCount": 6,
  "unitId": 0,
  "vendorId": 1523,
}
`;

exports[`Unit tests XKeys methods 2`] = `Array []`;

exports[`Unit tests XKeys methods 3`] = `
Array [
  "00b305010000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 4`] = `
Array [
  "00b305000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 5`] = `
Array [
  "00b305020000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 6`] = `
Array [
  "00b504010100000000000000000000000000000000000000000000000000000000000000",
  "00b524010100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 7`] = `
Array [
  "00b504010100000000000000000000000000000000000000000000000000000000000000",
  "00b524010100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 8`] = `
Array [
  "00b504010100000000000000000000000000000000000000000000000000000000000000",
  "00b524010100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 9`] = `
Array [
  "00b504010100000000000000000000000000000000000000000000000000000000000000",
  "00b524010100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 10`] = `
Array [
  "00b504010100000000000000000000000000000000000000000000000000000000000000",
  "00b524000100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 11`] = `
Array [
  "00b504000100000000000000000000000000000000000000000000000000000000000000",
  "00b524000100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 12`] = `
Array [
  "00b504000100000000000000000000000000000000000000000000000000000000000000",
  "00b524000100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 13`] = `
Array [
  "00b504000100000000000000000000000000000000000000000000000000000000000000",
  "00b524000100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 14`] = `
Array [
  "00b504020100000000000000000000000000000000000000000000000000000000000000",
  "00b524020100000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 15`] = `
Array [
  "00b600ff0000000000000000000000000000000000000000000000000000000000000000",
  "00b601550000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 16`] = `
Array [
  "00b600ff0000000000000000000000000000000000000000000000000000000000000000",
  "00b601550000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 17`] = `
Array [
  "00b600ff0000000000000000000000000000000000000000000000000000000000000000",
  "00b601550000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 18`] = `
Array [
  "00b600ff0000000000000000000000000000000000000000000000000000000000000000",
  "00b6012d0000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 19`] = `
Array [
  "00b600ff0000000000000000000000000000000000000000000000000000000000000000",
  "00b601000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 20`] = `
Array [
  "00b600000000000000000000000000000000000000000000000000000000000000000000",
  "00b601000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 21`] = `
Array [
  "00b600000000000000000000000000000000000000000000000000000000000000000000",
  "00b601000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 22`] = `
Array [
  "00b600000000000000000000000000000000000000000000000000000000000000000000",
  "00b601000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 23`] = `
Array [
  "00b800000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 24`] = `
Array [
  "00bb64640000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 25`] = `
Array [
  "00bb00ff0000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 26`] = `
Array [
  "00c701000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 27`] = `
Array [
  "00b47f000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 28`] = `
Array [
  "00bd2a000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 29`] = `
Array [
  "00ee00000000000000000000000000000000000000000000000000000000000000000000",
]
`;

exports[`Unit tests XKeys methods 30`] = `
Array [
  "000102030400000000000000000000000000000000000000000000000000000000000000",
]
`;
